2012-05-03  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Allow the web process and WTR to be paused on startup

        Makes it easier to debug the web process or run-webkit-tests -2, as you
        have ample time to attach gdb to the process.

        Reviewed by Simon Hausmann.

        * WebProcess/qt/WebProcessMainQt.cpp:
        (WebKit::WebProcessMainQt):
        * qt/MainQt.cpp:
        (main):

2012-05-03  Alexander Færøy  <ahf@0x90.dk>

        Rename deviceDPI to devicePixelRatio
        https://bugs.webkit.org/show_bug.cgi?id=85049

        Reviewed by Kenneth Rohde Christiansen.

        This patch fixes an API test regression from r115948 in
        tst_QQuickWebView::scrollRequest() by setting the device pixel ratio
        for the test WebView to 1.5.

        * UIProcess/API/qt/tests/qquickwebview/tst_qquickwebview.cpp:
        (tst_QQuickWebView::newWebView):

2012-05-03  Stephanie Lewis  <slewis@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=85450 unbounded growth of JSDOMWindowShells loading pages in the same window
        <rdar://problem/11320059> REGRESSION (r115083): PLT3 shows linear memory growth and gets slower with each run

        Reviewed by Brady Eidson.

        The API added for DOMWindowExtension, didCreateGlobalObjectForFrame, would create a global object
        for every world, even those that did not need the callback.  This had the side effect of creating a
        JSDOMWindowShell that the associated world didn't necessarily know to clean up.  Instead of creating
        unnecessary objects change the API to globalObjectIsAvailableForFrame and do not pass the global object
        in the API.  The object can be accessed later by those worlds which require it.

        * WebProcess/InjectedBundle/API/c/WKBundlePage.h:
        * WebProcess/InjectedBundle/InjectedBundlePageLoaderClient.cpp: